--- a/style.css
+++ b/style.css
@@ -4,14 +4,16 @@ h1{
 
 
 .container{
- display: inline-grid;
- grid-template-columns: 100px 100px 100px 100px;
- grid-template-rows: 100px 100px 100px 100px 100px 100px;
+ display: grid;
  gap: 5px;
  border: 2px solid black;
- padding: 50px ;
+ padding: 30px;
  border-radius: 50px;
  background: rgba(148, 187, 233, 1);
+ margin: auto;
+ width: 400px;
+ text-align: center;
+ 
  
 }
 .display{
@@ -20,19 +22,37 @@ h1{
  margin: 5px;
  text-align: right;
  font-size: 50px;
- padding: 10px;
+ padding: 5px;
  background:white;
  border-radius: 20px;
+ height: 75px;
  
 }
 
-.zero {
+#zero {
  grid-column: 1 / 3;
 }
 
+#clear{
+ grid-column: 1 / 3;
+ background-color: orange;
+}
+
+.operator,  .equal {
+ background-color: lightblue;
+}
+
+.number, .decimal{
+ background-color: white;
+}
+
+
+
 button{
  font-size: x-large;
- border-radius: 50px;
+ border-radius: 20px;
+ height: 75px;
+ 
 }
 
 
